@@ -5,11 +5,11 @@ gem 'rails',                '3.2.6'
 # Database Adapter
 # Install instructions for Windows: http://blog.mmediasys.com/2011/07/07/installing-mysql-on-windows-7-x64-and-using-ruby-with-it/
 gem 'mysql2',               '0.3.11'
-gem 'thin',                 '~> 1.3.1',           :platforms => [ :mswin, :mingw ]
-gem 'eventmachine',         '~> 1.0.0.beta.4.1',  :platforms => [ :mswin, :mingw ]
+gem 'thin',                 '~> 1.4.1',           :platforms => [ :mswin, :mingw ]
+gem 'eventmachine',         '~> 1.0.0.rc.4',      :platforms => [ :mswin, :mingw ]
 
 # Gems used by project
-gem 'contour',              '~> 1.0.2'
+gem 'contour',              '~> 1.0.3'
 gem 'kaminari',             '~> 0.13.0'
 gem 'ri_cal',               '~> 0.8.8'
 
