@@ -180,20 +180,3 @@ span.selected {
 .tab-pane {
   max-height: none ! important;
 }
-
-/* Faded out hr */
-hr.soften {
-  height: 1px;
-  margin: 54px 0 20px 0;
-  background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
-  background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
-  background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
-  background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
-  border: 0;
-}
-
-.about {
-  font-size: 22px;
-  line-height: 36px;
-  font-weight: 300;
-}
