@@ -2,51 +2,50 @@
 
 <div class="row" style="margin-top:54px">
   <div class="span12">
-    <h1 style="font-size:40px;font-weight:300;text-align:center;margin-bottom:9px"><%= @title %></h1>
-    <p style="font-size:18px;line-height:36px;font-weight:300;color:#999;text-align:center">Visit our <%= link_to 'online community', ABOUT_PAGE_FORUM, target: '_blank' %> or contact us <%= mail_to ABOUT_PAGE_CONTACT, 'via email', target: '_blank', subject: "#{DEFAULT_APP_NAME} Question" %>.</p>
-    <p style="text-align:center;line-height:36px;"><%= link_to 'Sign Me Up', new_user_registration_path, class: "btn btn-primary btn-large" %></p>
+    <h1 class="about-title"><%= @title %></h1>
+    <p class="about-tagline">Visit our <%= link_to 'online community', ABOUT_PAGE_FORUM, target: '_blank' %> or contact us <%= mail_to ABOUT_PAGE_CONTACT, 'via email', target: '_blank', subject: "#{DEFAULT_APP_NAME} Question" %>.</p>
+    <p class="about-signup"><%= link_to 'Sign Me Up', new_user_registration_path, class: "btn btn-primary btn-large" %></p>
   </div>
 </div>
 
 <hr class="soften">
 
-<p style="font-size:18px;line-height:36px;font-weight:300;color:#999;text-align:center;margin-bottom:20px"><%= DEFAULT_APP_NAME %> is a <%= link_to 'free to use*', 'https://github.com/remomueller/tasktracker/blob/master/LICENSE', rel: 'tooltip', data: { title: 'Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License' } %> and <%= link_to 'open source', 'https://github.com/remomueller/tasktracker', rel: 'tooltip', data: { title: 'Source code freely available on GitHub' } %> project management tool that minimizes overhead and maximizes productivity and accountability.</p>
+<p class="about-description"><%= DEFAULT_APP_NAME %> is a <%= link_to 'free to use*', 'https://github.com/remomueller/tasktracker/blob/master/LICENSE', rel: 'tooltip', data: { title: 'Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License' } %> and <%= link_to 'open source', 'https://github.com/remomueller/tasktracker', rel: 'tooltip', data: { title: 'Source code freely available on GitHub' } %> project management tool that minimizes overhead and maximizes productivity and accountability.</p>
 
 <div class="row">
   <div class="span4">
-    <h2 class="about">View Calendar</h2>
-    <p>View of your current and upcoming stickies for multiple projects.</p>
+    <h2 class="about-title">View Calendar</h2>
+    <p>View tasks for multiple projects.</p>
     <p>
     <ul>
-      <li>Create Stickies and Templates directly from the calendar.</li>
-      <li>View only the stickies you need on the calendar by filtering on projects, completion status, and those assigned exclusively to you.</li>
-      <li>Stickies are grouped together by <span class="label label-info">Tags</span>.</li>
+      <li>Directly add new <b>Tasks</b> and instantly create groups of tasks from project-specific <b>Templates</b>.</li>
+      <li>Filter tasks by project, completion status, and tasks assigned to you.</li>
+      <li>Tasks are grouped by <span class="label label-info">Tags</span>.</li>
     </ul>
     </p>
   </div>
 
   <div class="span4">
-    <h2 class="about">Create Stickies</h2>
-    <p>Incremental updates to track and achieve your project goals.</p>
+    <h2 class="about-title">Create Tasks</h2>
+    <p>Keep track of what you need to accomplish.</p>
     <p>
       <ul>
-        <li>Provide documentation, todos, follow-ups, and more!</li>
-        <li>Assign collaborators to a sticky for them to complete.</li>
-        <li>Add <span class="label label-info">Tags</span> to Stickies for easier reporting and searching.</li>
+        <li>Add <span class="label label-info">Tags</span> to tasks for easier reporting and searching.</li>
+        <li>Assign tasks to collaborators.</li>
         <li>Post <b>Comments</b> on stickies that get emailed to collaborators.</li>
       </ul>
     </p>
   </div>
 
   <div class="span4">
-    <h2 class="about">Create Projects</h2>
-    <p>Share your projects with collaborators and categorize your stickies.</p>
+    <h2 class="about-title">Create Projects</h2>
+    <p>Share your projects with collaborators.</p>
     <p>
       <ul>
         <li>Invite <b>Editors</b> that can participate on your projects.</li>
-        <li>Invite <b>Viewers</b> that can see project updates and comment on stickies.</li>
+        <li>Invite <b>Viewers</b> that can see project updates and comment on tasks.</li>
         <li>Create project specific <span class="label label-info">Tags</span> to easily find and get statistics on stickies.</li>
-        <li>Create <b>Sticky Templates</b> for common series of stickies and assign stickies to collaborators.</li>
+        <li>Create <b>Templates</b> for common series of tasks and assign tasks to collaborators.</li>
       </ul>
     </p>
   </div>
@@ -55,5 +54,5 @@
 <hr class="soften">
 
 <footer class="footer">
-  <p class="muted" style="text-align:center;font-weight:300;">Task Tracker Version <%= link_to Notes::VERSION::STRING, "https://github.com/remomueller/tasktracker/tree/#{Notes::VERSION::MAJOR}.#{Notes::VERSION::MINOR}.#{Notes::VERSION::TINY}" %></p>
+  <p class="muted about-footer">Task Tracker Version <%= link_to Notes::VERSION::STRING, "https://github.com/remomueller/tasktracker/tree/#{Notes::VERSION::MAJOR}.#{Notes::VERSION::MINOR}.#{Notes::VERSION::TINY}" %></p>
 </footer>
