@@ -2,24 +2,40 @@
 
 <%= form_tag calendar_stickies_path, remote: true, method: :get, id: 'sticky_calendar_form', style: 'margin-bottom:0px' do %>
   <%= hidden_field_tag :save_settings, '1' %>
-  <div class="row">
-    <div class="span2">
-      <h3 id="calendar-title"><%= render partial: 'calendar_title' %></h3>
+  <div class="row" style="margin-top:-10px">
+    <div class="span4 btn-toolbar">
+      <h3 id="calendar-title" style="font-size:27px;font-weight:300"><%= render partial: 'calendar_title' %></h3>
     </div>
-    <div class="span3">
-      <div class="btn-group">
-        <%= link_to '&larr;'.html_safe, '#', title: 'Previous Month', class: 'btn', data: { object: 'calendar-previous-month' } %>
-        <%= link_to 'Today', '#', class: 'btn', data: { object: 'calendar-today' } %>
-        <%= link_to '&rarr;'.html_safe, '#', title: 'Next Month', class: 'btn', data: { object: 'calendar-next-month' } %>
+    <div class="span4" style="text-align:center">
+      <div class="btn-toolbar">
+        <div class="btn-group" style="height:37px">
+          <%= link_to 'Today', '#', class: 'btn', data: { object: 'calendar-today' } %>
+        </div>
+        <div class="btn-group" style="height:37px">
+          <%= link_to '&larr;'.html_safe, '#', title: 'Previous Month', class: 'btn', data: { object: 'calendar-previous-month' } %>
+          <%= hidden_field_tag :direction, 0 %>
+          <%= text_field_tag :selected_date, @selected_date.strftime('%m/%d/%Y'), class: 'datepicker btn', style: 'width:68px' %>
+          <%= link_to '&rarr;'.html_safe, '#', title: 'Next Month', class: 'btn', data: { object: 'calendar-next-month' } %>
+        </div>
       </div>
     </div>
-    <div class="span3" style="text-align:center">
-      <%= hidden_field_tag :direction, 0 %>
-      <%= text_field_tag :selected_date, @selected_date.strftime('%m/%d/%Y'), class: 'datepicker', style: 'width:68px' %>
-    </div>
     <div class="span4" style="text-align:right">
-      <span style="white-space:nowrap"><%= check_box_tag 'assigned_to_me', '1', (params[:assigned_to_me] == '1') %> Assigned To Me</span>
-      <%= render partial: 'stickies/check_box_status' %>
+      <% status_all = (params[:status].include?('planned') and params[:status].include?('completed')) %>
+
+      <div class="btn-toolbar">
+        <div class="btn-group">
+          <button id="assigned-to-me-btn" class="btn <%= 'active' if params[:assigned_to_me] == '1' %>">Assigned To Me</button>
+        </div>
+
+        <div class="btn-group" data-toggle="buttons-radio">
+          <button id="all-stickies" class="btn <%= 'active' if status_all %>">All</button>
+          <button id="not-completed-stickies" class="btn <%= 'active' unless status_all %>">Not Completed</button>
+        </div>
+      </div>
+
+      <%= hidden_field_tag 'status[]', 'planned', id: 'status_planned' %>
+      <%= hidden_field_tag 'status[]', (status_all ?  'completed' : ''), id: 'status_completed' %>
+      <%= hidden_field_tag 'assigned_to_me', params[:assigned_to_me] %>
     </div>
   </div>
 <% end %>
