@@ -1,5 +1,8 @@
 == 0.23.0
 
+* Enhancements
+  * Calendar header has been simplified
+
 == 0.22.6
 
 * Enhancements
